dropzone does not normalize type strings https://bugs.webkit.org/show_bug.cgi?id=76925

Source/WebCore:

Per the HTML spec, we are supposed to normalize types during dropzone processing by
lowercasing them.

Reviewed by Tony Chang.

Tests: fast/events/dropzone-002.html

* dom/Clipboard.cpp:
(WebCore::Clipboard::hasDropZoneType):

LayoutTests:

Reviewed by Tony Chang.

* fast/events/dropzone-002.html: Update layout test to check case normalization as well.

Canonical link: https://commits.webkit.org/93814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105800 268f45cc-cd09-0410-ab3c-d52691b4dbfc